# PyCamPermanent

./: .gitignore  Notes.txt  README.md  notes.md  pi_files.xlsx  process_emission_rates.py  pycam-manual.docx  pyproject.toml  requirements.txt  requirements_new.txt
pycam/: controllers.py  directory_watcher.py  io_py.py  profiling.py  pycam_env.yml  setupclasses.py  so2_camera_processor.py  utils.py
pycam/conf/: cam_specs.txt  cam_specs_off.txt  cam_specs_on.txt  config.txt  default_conf_location.txt  network_external.txt  network_ports.txt  processing_setting_defaults.yml  spec_specs.txt
pycam/conf/cron/: script_schedule.txt
pycam/doas/: cfg.py  doas_worker.py  ifit_worker.py  spec_worker.py
pycam/gui/: acquisition.py  cfg.py  cfg_menu_frames.py  figures_analysis.py  figures_cam.py  figures_doas.py  logs.py  menu.py  misc.py  network.py  pycam_gui.py  settings.py
pycam/ifit_ld/: lookup.py
pycam/logging/: logging_tools.py
pycam/networking/: FTP.py  sockets.py  ssh.py
pycam/scripts/: check_disk_space.py  check_run.py  command_line_notes.md  copy_to_xdrive.sh  free_space_ssd.py  kill_process.py  log_temperature.sh  mount_ssd.py  plot_results.py  process_doas.py  process_emission_rates.py  process_image_sequence.py  pycam_camera.py  pycam_master2.py  pycam_masterpi.py  pycam_spectrometer.py  remote_pi_run_pycam.py  start_instrument.py  stop_instrument.py
pycam/tests/: run_basic_img_capt.py  run_camera.py  run_darks_test.py  run_ext_conn.py  run_interactive_test.py  run_spectrometer_test.py  test_setupclasses.py  test_sockets.py
(+8 files in other folders)
